[package]
name = "time_tracker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
r2d2 = "0.8.9"
actix-cors = "0.5.4"
serde = "1.0.130"
chrono = { version = "0.4.19", features = ["serde"]}